# skald

./: .gitignore  .gitmodules  ANVIL.md  BACKLOG.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  KANBAN.md  LICENSE  README.md  ROADMAP.md  ReleaseNotes.md  TODO.md  cog.toml  deploy.sh  example.ska  index.js  package-lock.json  package.json  skald-parser.js  test-engine.js  test.sh  test.ska
bindings/c/: skald_c.cpp  skald_c.h  test_c_api.c
compiler/: TODO.md  index.js  package-lock.json  package.json  test.json
docs/: Engine.md  FutureFeatures.md  Syntax.md
example/: example.ska  package-lock.json  package.json
example/intellij/: skald-code-style.xml
example/public/: example.ska
example/src/: App.css  App.js
ide/sublime/: skald.sublime-settings  skald.sublime-syntax
include/: skald.h  skald_version.h.in
lsp/: README.md  SIGNPOST.md  diag.py
lsp/src/: analyzer.cpp  analyzer.h  codex_cache.cpp  codex_cache.h  document.cpp  document.h  lints.h  lsp_actions.h  lsp_doc_util.h  lsp_parse_state.h  lsp_types.h  main.cpp  move_resolver.cpp  move_resolver.h  parse_guard.h  project_index.cpp  project_index.h  server.cpp  server.h  transport.cpp  transport.h  workspace.cpp  workspace.h
parser/include/: skald.h
parser/src/: skald.cpp  test_main.cpp
src/: codex_actions.h  codex_grammar.h  codex_parse_state.cpp  codex_parse_state.h  debug.cpp  debug.h  logger.h  parse_state.cpp  parse_state.h  shared_grammar.h  skald.cpp  skald_actions.h  skald_grammar.h  skalder.cpp  skalder_fs.h  test_main.cpp
test/: hold.ska  test.codex  test.ska  test2.ska  test_2.ska  test_long.ska  test_old.ska  test_short.ska
test/e2e/: test_e2e.cpp
test/grammar/: test_grammar.cpp
tree-sitter-skald/: CMakeLists.txt  Cargo.toml  Package.swift  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  temp.ska  tree-sitter.json
tree-sitter-skald/bindings/c/: tree-sitter-skald.pc.in
tree-sitter-skald/bindings/c/tree_sitter/: tree-sitter-skald.h
tree-sitter-skald/bindings/go/: binding.go  binding_test.go
tree-sitter-skald/bindings/node/: binding.cc  index.js
tree-sitter-skald/bindings/python/tests/: test_binding.py
tree-sitter-skald/bindings/python/tree_sitter_skald/: __init__.py  binding.c
tree-sitter-skald/bindings/rust/: build.rs  lib.rs
tree-sitter-skald/bindings/swift/TreeSitterSkaldTests/: TreeSitterSkaldTests.swift
tree-sitter-skald/queries/: highlights.scm
tree-sitter-skald/src/: grammar.json  node-types.json  parser.c
tree-sitter-skald/test/corpus/: basics.txt  beats-insertions.txt  test.ska  test.txt
