[package]
name = "tree-sitter-skald"
description = "A fast narrative scripting language for games and interactive fiction"
version = "0.1.0"
authors = ["Tim Raveling"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "skald"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tsraveling/skald"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
